kubernetes/deployment-tayko.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tayko-co
  labels:
    app: tayko-co-app
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tayko-co-app
  template:
    metadata:
      labels:
        app: tayko-co-app
    spec:
      containers:
      - name: tayko-co-site
        image: tayko/tayko-co:v_3e49e950
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
          - mountPath: /app/Blog
            name: blog-data
      volumes:
      - name: blog-data
        persistentVolumeClaim:
          claimName: 'tayko-co-pvc'
