kubernetes/statefuleset-tayko.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tayko-co
  labels:
    app: tayko-co-app
spec:
  replicas: 3
  revisionHistoryLimit: 2
  serviceName: tayko-co-service
  selector:
    matchLabels:
      app: tayko-co-app
  template:
    metadata:
      labels:
        app: tayko-co-app
    spec:
      containers:
      - name: tayko-co-site
        image: tayko/tayko.co:v_3e49e950
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
          - mountPath: /app/Blog
            name: tayko-blog-data
  volumeClaimTemplates:
  - metadata:
      name: tayko-blog-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
      storageClassName: do-block-storage
