kubernetes/service-tayko.yaml
apiVersion: v1
kind: Service
metadata:
  name: tayko-co-service
  labels:
    app: tayko-co-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tayko-co-app
